# template

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: ansi.color.cmake  components.cmake  custom_target.cmake  post_build.cmake
source/: CMakeLists.txt  source.cpp
static/: template.rc
