CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(template)
SET(BIN_TARGET ${PROJECT_NAME})
SET(CMAKE_CXX_STANDARD 11)
IF ("x${CMAKE_BUILD_TYPE}" STREQUAL "x")
    SET(CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF ()
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/target/${CMAKE_BUILD_TYPE})

INCLUDE(cmake/ansi.color.cmake)
INCLUDE(cmake/components.cmake)
MESSAGE(STATUS "${BR}Build Type: ${BC}${CMAKE_BUILD_TYPE}${OO}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/github)
ADD_SUBDIRECTORY(source)
ADD_EXECUTABLE(${BIN_TARGET} main.cpp static/${PROJECT_NAME}.rc)
TARGET_LINK_LIBRARIES(${BIN_TARGET} PUBLIC BeeBase DBLayer hlog source)

INCLUDE(cmake/post_build.cmake)
INCLUDE(cmake/custom_target.cmake)