SET(CURR_DIR ${CMAKE_CURRENT_SOURCE_DIR})

GET_FILENAME_COMPONENT(LIB_NAME ${CURR_DIR} NAME_WE)
MESSAGE(STATUS "编译静态库: ${LIB_NAME}.lib")

FILE(GLOB children RELATIVE ${CURR_DIR} ${CURR_DIR}/*)

AUX_SOURCE_DIRECTORY(${CURR_DIR} "${child}_SRCS")
MESSAGE(STATUS "添加${CURR_DIR}下的源文件到静态库 ${LIB_NAME}")
LIST(APPEND ${LIB_NAME}_SRCS ${${child}_SRCS})

FOREACH (child ${children})
    IF (IS_DIRECTORY ${CURR_DIR}/${child})
        AUX_SOURCE_DIRECTORY(${CURR_DIR}/${child} "${child}_SRCS")
        MESSAGE(STATUS "添加${child}下的源文件到静态库 ${LIB_NAME}")
        LIST(APPEND ${LIB_NAME}_SRCS ${${child}_SRCS})
    ENDIF ()
ENDFOREACH ()

MESSAGE(STATUS "${LIB_NAME}: ${${LIB_NAME}_SRCS}")

ADD_LIBRARY(${LIB_NAME} STATIC ${${LIB_NAME}_SRCS})
SET_TARGET_PROPERTIES(${child} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")